# integration-qa-tax-calculator

./: .env.example  .gitignore  LICENSE  Makefile  README.md  extract_discounts.py  pyproject.toml  requirements.txt  verify-order.bat
.github/workflows/: ci.yml
src/smart_cal/: __init__.py  __main__.py  cli.py
src/smart_cal/tax_calculation/: __init__.py  repository.py  verification.py
src/smart_cal/utils/: __init__.py  config.py  logging.py
tests/: conftest.py  test_cli.py  test_utils.py
